--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
         applicationId "com.example.rviciana.safeflight"
         minSdkVersion 23
         targetSdkVersion 28
-        versionCode 1
+        versionCode 20190102
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
