--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,15 +32,15 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:16.0.0'
 
     // RxKotlin
-    implementation 'io.reactivex.rxjava2:rxkotlin:2.2.0'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+    implementation "io.reactivex.rxjava2:rxkotlin:${rxKotlinVersion}"
+    implementation "io.reactivex.rxjava2:rxandroid:${rxAndroidVersion}"
 
     // Retrofit
-    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
-    implementation 'com.squareup.retrofit2:adapter-rxjava:2.2.0'
-    implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
+    implementation "com.squareup.retrofit2:retrofit:${retrofitVersion}"
+    implementation "com.squareup.retrofit2:converter-gson:${gsonVersion}"
+    implementation "com.squareup.retrofit2:adapter-rxjava:${adapterRxJavaVersion}"
+    implementation "com.jakewharton.retrofit:retrofit2-rxjava2-adapter:${rxJava2Adapter}"
+    implementation "com.squareup.okhttp3:logging-interceptor:${okHttp3Version}"
 
     // Dagger
     implementation "com.google.dagger:dagger:${daggerVersion}"
